--- a/game.html
+++ b/game.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
+
 <head>
-	<title></title>
-    <link rel="stylesheet" type="text/css" href="Project.css">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/8bit-wonder" type="text/css"/>
+  <meta charset="UTF-8">
+  <title>Typeriods</title>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  
+  
+      <link rel="stylesheet" href="css/Project.css">
+
+  
 </head>
-<body>
-<canvas id="c"></canvas>
-<input id="input"/>
+
+<body background ="bg1.gif">>
+	<img src="jet.gif">
+
+
+
+
+  <canvas id = "c"></canvas>
+<input id = "input"/>
+  
+  
+
+    <script src="js/Project.js"></script>
+
+
+
+
 </body>
-<script src="Project.js"></script>
+
 </html>
