--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   
   
-      <link rel="stylesheet" href="css/Project.css">
+      <link rel="stylesheet" href="Project.css">
 
   
 </head>
@@ -23,7 +23,7 @@
   
   
 
-    <script src="js/Project.js"></script>
+    <script src="Project.js"></script>
 
 
 
