--- a/game.html
+++ b/game.html
@@ -9,18 +9,17 @@
   
       <link rel="stylesheet" href="Project.css">
 
-  
 </head>
 
-<body background ="bg1.gif">>
+<body background ="bg1.gif">
 	<img src="jet.gif">
-
-
-
 
   <canvas id = "c"></canvas>
 <input id = "input"/>
-  
+  <audio autoplay loop>
+  <source src="https://raw.githubusercontent.com/sahussawud/Multi-Tech-Game/master/backgroundmc.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
   
 
     <script src="Project.js"></script>
