--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Typeriods</title>
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   
   
       <link rel="stylesheet" href="Project.css">
@@ -13,17 +14,29 @@
 
 <body background ="bg1.gif">
 	<img src="jet.gif">
-
+    <iframe src="./backgroundmc.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+    </iframe> 
+    <audio autoplay loop  id="playAudio">
+        <source src="./backgroundmc.mp3">
+    </audio>
   <canvas id = "c"></canvas>
 <input id = "input"/>
-  <audio autoplay loop>
-  <source src="https://raw.githubusercontent.com/sahussawud/Multi-Tech-Game/master/backgroundmc.mp3" type="audio/mpeg">
+  <!-- <audio autoplay loop> -->
+<!--   <source src="https://raw.githubusercontent.com/sahussawud/Multi-Tech-Game/master/backgroundmc.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-  
+   -->
 
     <script src="Project.js"></script>
-
+    <script type="text/javascript">
+        var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
+            if(!isChrome){
+      $('#iframeAudio').remove()
+    }
+    else{
+        $('#playAudio').remove() //just to make sure that it will not have 2x audio in the background 
+  }
+</script>
 
 
 
