kuy pound kuy base

--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body background ="bg1.gif">
+<body background ="pic3.gif">
 	<img src="jet.gif">
     <iframe src="./backgroundmc.mp3" allow="autoplay" style="display:none" id="iframeAudio">
     </iframe> 
