update font color

--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>THE GALAXY OF DICTIONARY</title>
+  <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/155/rocket_1f680.png" type="image/x-icon"> 
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   
   
@@ -11,10 +12,10 @@
 
 </head>
 
-<body background ="pic3.gif">
+<body background ="./pic/pic3.gif">
     <iframe src="./backgroundmc.mp3" allow="autoplay" style="display:none" id="iframeAudio">
     </iframe>
-	<img src="jet.gif">
+	<img src="./pic/jet.gif">
   <canvas id = "c"></canvas>
 <input id = "input"/>
 
