--- a/game.html
+++ b/game.html
@@ -13,10 +13,15 @@
 </head>
 
 <body background ="./pic/pic3.gif">
-    <iframe src="./backgroundmc.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+    <iframe src="./music/backgroundmc.mp3" allow="autoplay" style="display:none" id="iframeAudio">
     </iframe>
 	<img src="./pic/jet.gif">
   <canvas id = "c"></canvas>
+  <div id = "box"><p>HOW TO PLAY!</p>
+    1.The word will fall down from top of your screen.<br>
+    2.Your have to type following the stress word.<br>
+    3.prevent words passing the spaceship<br>
+    4.Show me your talent typing skill, Let's SPACE now!!!</div>
 <input id = "input"/>
 
 <audio controls loop autoplay hidden>
