--- a/game.html
+++ b/game.html
@@ -13,8 +13,8 @@
 </head>
 
 <body background ="./pic/pic3.gif">
-    <iframe src="./music/backgroundmc.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-    </iframe>
+    <!-- <iframe src="./music/backgroundmc.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+    </iframe> -->
 	<img src="./pic/jet.gif">
   <canvas id = "c"></canvas>
   <div id = "box"><p>HOW TO PLAY!</p>
@@ -25,7 +25,7 @@
 <input id = "input"/>
 
 <audio controls loop autoplay hidden>
-  <source src="./backgroundmc.mp3" type="audio/mpeg">
+  <source src="./music/backgroundmc.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
