--- a/game.html
+++ b/game.html
@@ -14,20 +14,23 @@
 
 <body background ="./pic/pic3.gif">
     <!-- <iframe src="./music/backgroundmc.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-    </iframe> -->
+    </iframe>  -->
+  <audio controls loop autoplay hidden>
+  <source src="./music/backgroundmc.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 	<img src="./pic/jet.gif">
   <canvas id = "c"></canvas>
   <div id = "box"><p>HOW TO PLAY!</p>
     1.The word will fall down from top of your screen.<br>
     2.Your have to type following the stress word.<br>
     3.prevent words passing the spaceship<br>
-    4.Show me your talent typing skill, Let's SPACE now!!!</div>
+    4.Show me your talent typing skill, Let's SPACE now!!!
+    <h5 class="press" >PLEASE PRESS F11 FOR</p>
+    <h3 class= "press">FULL-SCREEN</h3></div>
 <input id = "input"/>
 
-<audio controls loop autoplay hidden>
-  <source src="./music/backgroundmc.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
+
 
 
     <script src="Project.js"></script>
